fix(syntax): use inline line_format to prevent compression from collapsing line numbers (#97)

--- a/_sass/addon/syntax.scss
+++ b/_sass/addon/syntax.scss
@@ -84,6 +84,7 @@ html {
   }
 
   .lineno {
+    display: inline-block;
     text-align: right;
     color: var(--highlight-lineno-color);
     -webkit-user-select: none;
